<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Monogatari</string>
    <string name="local_storage">Local storage</string>
    <string name="favourites">Favorites</string>
    <string name="history">History</string>
    <string name="error_occurred">An error occurred</string>
    <string name="network_error">Network error</string>
    <string name="details">Details</string>
    <string name="chapters">Chapters</string>
    <string name="list">Liste</string>
    <string name="detailed_list">Detailed list</string>
    <string name="grid">Grid</string>
    <string name="list_mode">List mode</string>
    <string name="settings">Settings</string>
    <string name="remote_sources">Manga sources</string>
    <string name="loading_">Loadingâ€¦</string>
    <string name="computing_">Computingâ€¦</string>
    <string name="chapter_d_of_d">Chapter %1$d of %2$d</string>
    <string name="close">Close</string>
    <string name="try_again">Try again</string>
    <string name="retry">Retry</string>
    <string name="clear_history">Clear history</string>
    <string name="nothing_found">Nothing found</string>
    <string name="history_is_empty">No history yet</string>
    <string name="read">Read</string>
    <string name="you_have_not_favourites_yet">No favorites yet</string>
    <string name="add_to_favourites">Favorite this</string>
    <string name="add_new_category">New category</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="create_shortcut">Create shortcut</string>
    <string name="share_s">Share %s</string>
    <string name="search">Search</string>
    <string name="search_manga">Search manga</string>
    <string name="manga_downloading_">Downloadingâ€¦</string>
    <string name="processing_">Processingâ€¦</string>
    <string name="download_complete">Downloaded</string>
    <string name="downloads">Downloads</string>
    <string name="by_name">Name</string>
    <string name="popular">Popular</string>
    <string name="updated">Updated</string>
    <string name="newest">Newest</string>
    <string name="by_rating">Rating</string>
    <string name="sort_order">Sorting order</string>
    <string name="filter">Filter</string>
    <string name="saved_filters">Saved filters</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="follow_system">Follow system</string>
    <string name="pages">Pages</string>
    <string name="clear">Clear</string>
    <string name="remove">Remove</string>
    <string name="_s_deleted_from_local_storage">\"%s\" deleted from local storage</string>
    <string name="save_page">Save page</string>
    <string name="page_saved">Page saved</string>
    <string name="pages_saved">Pages saved</string>
    <string name="share_image">Share image</string>
    <string name="_import">Import</string>
    <string name="delete">Delete</string>
    <string name="operation_not_supported">This operation is not supported</string>
    <string name="text_file_not_supported">Either pick a ZIP or CBZ file.</string>
    <string name="no_description">No description</string>
    <string name="clear_pages_cache">Clear page cache</string>
    <string name="text_file_sizes">B|kB|MB|GB|TB</string>
    <string name="standard">Standard</string>
    <string name="webtoon">Webtoon</string>
    <string name="read_mode">Read mode</string>
    <string name="grid_size">Grid size</string>
    <string name="search_on_s">Search on %s</string>
    <string name="delete_manga">Delete manga</string>
    <string name="text_delete_local_manga">Permanently delete \"%s\" from device?</string>
    <string name="reader_settings">Reader settings</string>
    <string name="switch_pages">Switch pages</string>
    <string name="_continue">Continue</string>
    <string name="error">Error</string>
    <string name="clear_thumbs_cache">Clear thumbnails cache</string>
    <string name="clear_search_history">Clear search history</string>
    <string name="search_history_cleared">Cleared</string>
    <string name="internal_storage">Internal storage</string>
    <string name="external_storage">External storage</string>
    <string name="domain">Domain</string>
    <string name="app_update_available">A new version of the app is available</string>
    <string name="open_in_browser">Open in web browser</string>
    <string name="notifications">Notifications</string>
    <string name="enabled_d_of_d" tools:ignore="PluralsCandidate">%1$d of %2$d on</string>
    <string name="new_chapters">New chapters</string>
    <string name="download">Download</string>
    <string name="notifications_settings">Notifications settings</string>
    <string name="notification_sound">Notification sound</string>
    <string name="light_indicator">LED indicator</string>
    <string name="vibration">Vibration</string>
    <string name="favourites_categories">Favorite categories</string>
    <string name="remove_category">Remove</string>
    <string name="text_empty_holder_primary">It\'s kind of empty hereâ€¦</string>
    <string name="text_search_holder_secondary">Try to reformulate the query.</string>
    <string name="text_history_holder_primary">What you read will be displayed here</string>
    <string name="text_history_holder_secondary">Find what to read in the Â«ExploreÂ» section</string>
    <string name="text_empty_holder_secondary_filtered">There are no manga matching the filters you selected</string>
    <string name="text_local_holder_primary">Save something first</string>
    <string name="text_local_holder_secondary">Save something from an online catalog or import it from a file.</string>
    <string name="manga_shelf">Shelf</string>
    <string name="recent_manga">Recent</string>
    <string name="pages_animation">Page animation</string>
    <string name="manga_save_location">Downloads folder</string>
    <string name="not_available">Not available</string>
    <string name="cannot_find_available_storage">No available storage</string>
    <string name="other_storage">Other storage</string>
    <string name="done">Done</string>
    <string name="all_favourites">All favorites</string>
    <string name="favourites_category_empty">Empty category</string>
    <string name="read_later">Read later</string>
    <string name="updates">Updates</string>
    <string name="text_feed_holder">New chapters of what you are reading are shown here</string>
    <string name="search_results">Search results</string>
    <string name="new_version_s">New version: %s</string>
    <string name="size_s">Size: %s</string>
    <string name="clear_updates_feed">Clear updates feed</string>
    <string name="updates_feed_cleared">Cleared</string>
    <string name="update_removed">Update removed</string>
    <string name="rotate_screen">Rotate screen</string>
    <string name="update">Update</string>
    <string name="feed_will_update_soon">Feed update will start soon</string>
    <string name="track_sources">Look for updates</string>
    <string name="dont_check">Don\'t check</string>
    <string name="enter_password">Enter password</string>
    <string name="wrong_password">Wrong password</string>
    <string name="protect_application">Protect the app</string>
    <string name="protect_application_summary">Ask for password when starting Kotatsu</string>
    <string name="repeat_password">Repeat the password</string>
    <string name="passwords_mismatch">Mismatching passwords</string>
    <string name="about">About</string>
    <string name="app_version">Version %s</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="no_update_available">No updates available</string>
    <string name="right_to_left">Right-to-left</string>
    <string name="create_category">New category</string>
    <string name="scale_mode">Scale mode</string>
    <string name="zoom_mode_fit_center">Fit center</string>
    <string name="zoom_mode_fit_height">Fit to height</string>
    <string name="zoom_mode_fit_width">Fit to width</string>
    <string name="zoom_mode_keep_start">Keep at start</string>
    <string name="black_dark_theme">Black</string>
    <string name="reset_filter">Reset filter</string>
    <string name="enabled_sources">Enabled sources</string>
    <string name="same_language_as_current">Same language as current</string>
    <string name="same_content_type_as_current">Same content type as current</string>
    <string name="hide_results_without_chapters">Hide results without chapters</string>
    <string name="best_match">Best match</string>
    <string name="most_chapters">Most chapters</string>
    <string name="closest_chapter_count">Closest chapter count</string>
    <string name="source_priority">Source priority</string>
    <string name="sync">Synchronization</string>
    <string name="sync_title">Sync your data</string>
    <string name="logout">Log out</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="crash_text">Something went wrong. Please submit a bug report to the developers to help us fix it.</string>
    <string name="send">Send</string>
    <string name="manage">Manage</string>
    <string name="server_address">Server address</string>
    <string name="no_thanks">No thanks</string>
    <string name="downloaded">Downloaded</string>
    <string name="community">Community</string>
    <string name="community_enabled">Community features</string>
    <string name="community_enabled_summary">Comments and ratings</string>
    <string name="community_telemetry">Share source reliability</string>
    <string name="community_telemetry_summary">Anonymous, per source only. Never which manga you read.</string>
    <string name="community_server">Server</string>
    <string name="community_nickname">Nickname</string>
    <string name="community_nickname_summary">How you appear on comments</string>
    <string name="community_recovery">Back up my identity</string>
    <string name="community_recovery_summary">Save your key, or restore one from another phone</string>
    <string name="community_delete">Delete everything about me</string>
    <string name="community_delete_summary">Erases your ratings and comments from the server, permanently</string>
    <string name="community_sponsor">Support Kotatsu-Redo</string>
    <string name="community_intro_replay">Show introduction</string>
    <string name="community_intro_replay_summary">Walk through the community features again</string>
    <string name="manage_sources">Manage sources</string>
    <string name="prev_chapter">Previous chapter</string>
    <string name="next_chapter">Next chapter</string>
    <string name="frequency_of_check">Frequency of check</string>
	<string name="source_presets">Source presets</string>
	<string name="community_comment_reply">Reply</string>
	<string name="community_comment_edit">Edit</string>
	<string name="community_comment_delete">Delete</string>
	<string name="community_comment_like">Like</string>
	<string name="community_comment_dislike">Dislike</string>
	<string name="community_export">Export my data</string>
	<string name="community_export_summary">Save a copy of your comments, ratings and votes</string>
    <string name="content_type">Content type</string>
    <string name="media_type_all">All</string>
    <string name="media_type_manga">Manga</string>
    <string name="media_type_book">Books</string>
    <string name="media_reader_decrease_text">Decrease text size</string>
    <string name="media_reader_increase_text">Increase text size</string>
    <string name="media_reader_decrease_text_short" translatable="false">Aâˆ’</string>
    <string name="media_reader_increase_text_short" translatable="false">A+</string>
    <string name="media_reader_previous_short" translatable="false">â€¹</string>
    <string name="media_reader_next_short" translatable="false">â€º</string>
</resources>